--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -40,6 +40,7 @@ jobs:
             echo "Waiting init container..."
             sleep 1
           done
+          sleep 10
 
       - name: logs init container
         run: docker logs mysql-base
