--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -38,9 +38,10 @@ jobs:
         run: |
           while [ -z "$(docker logs ${{ env.INIT_NAME }} 2>&1 | grep -c '/usr/sbin/mysqld: ready for connections' | grep 2)" ]; do
             echo "Waiting init container..."
+            docker logs mysql-base
             sleep 1
           done
-          sleep 30
+          sleep 5
 
       - name: logs init container
         run: docker logs mysql-base
